--- a/Catdex/Rust/catdex/Cargo.toml
+++ b/Catdex/Rust/catdex/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 actix-files = "0.5.0"
 actix-web = "3.3.2"
+handlebars = {version="3.5.3", features = ["dir_source"]}
+serde_json = "1.0.64"
