--- a/Authentication/NodeJS/package.json
+++ b/Authentication/NodeJS/package.json
@@ -5,8 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./src/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "fastify": "^3.14.1",
+    "fastify-static": "^4.0.1",
+    "mongodb": "^3.6.5"
+  }
 }
