--- a/Authentication/NodeJS/package.json
+++ b/Authentication/NodeJS/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "fastify": "^3.14.1",
     "fastify-static": "^4.0.1",
