--- a/Authentication/NetCore/Auth.API/Auth.API.csproj
+++ b/Authentication/NetCore/Auth.API/Auth.API.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Auth.Library\Auth.Library.csproj" />
+  </ItemGroup>
+
 </Project>
