update collection name

--- a/Authentication/NodeJS/package.json
+++ b/Authentication/NodeJS/package.json
@@ -18,5 +18,8 @@
     "fastify-static": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
